--- a/swagger/paths/questionnaires/get.yaml
+++ b/swagger/paths/questionnaires/get.yaml
@@ -1,12 +1,10 @@
-#/swagger/paths/contacts/get.yaml
+#/swagger/paths/questionnaires/get.yaml
 
 tags:
-  - Contacts
-summary: Get list of all contacts
-operationId: getContacts
-description: 'Get list of all contacts with this endpoint'
-security:
-  - bearerAuth: []
+  - Questionnaires
+summary: Get list of all Questionnaires
+operationId: getQuestionnaires
+description: 'Get list of all Questionnaires with this endpoint'
 parameters:
   - in: query
     name: page
@@ -23,29 +21,17 @@ parameters:
     schema:
       type: string
       example: 'name'
-    description: "Contact's fields that can be mentioned: _id, name, phoneNumber, email. Default value - _id"
+    description: "Questionnaire's fields that can be mentioned: _id, name, questionsQuantity, responseCount. Default value - _id"
   - in: query
     name: sortOrder
     schema:
       type: string
       enum: ['asc', 'desc']
       example: 'asc'
-  - in: query
-    name: type
-    schema:
-      type: string
-      enum: ['work', 'home', 'personal']
-      example: personal
-    description: 'Filters contacts according to schema'
-  - in: query
-    name: isFavourite
-    schema:
-      type: boolean
-      example: false
-    description: 'Filters contacts according to schema'
+security: []
 responses:
   '200':
-    description: Successfully found contacts!
+    description: Successfully found questionnaires!
     content:
       application/json:
         schema:
@@ -60,7 +46,7 @@ responses:
               example: 200
             message:
               type: string
-              example: Successfully found contacts!
+              example: Successfully found questionnaires!
             data:
               type: object
               required:
@@ -75,7 +61,7 @@ responses:
                 data:
                   type: array
                   items:
-                    $ref: '../../components/schemas/contact.yaml'
+                    $ref: '../../components/schemas/questionnaires.yaml'
                 page:
                   type: number
                   example: 2
