--- a/swagger/paths/questionnaires/{id}/get.yaml
+++ b/swagger/paths/questionnaires/{id}/get.yaml
@@ -1,21 +1,20 @@
-# swagger/paths/contacts/{id}/get.yaml
+# swagger/paths/questionnaires/{id}/get.yaml
 tags:
-  - Contacts
-summary: Get contact by id
-operationId: getContact
-description: 'Get contact by id'
-security:
-  - bearerAuth: []
+  - Questionnaires
+summary: Get questionnaire by ID
+operationId: getQuestionnaireById
+description: 'Get a questionnaire by its ID.'
 parameters:
   - in: path
-    name: :contactId
+    name: id
     required: true
     schema:
       type: string
-      example: '675c18e78827cedae1f61afd'
+      example: '65e4decdd286b30065d54af9'
+    description: 'The ID of the questionnaire to retrieve.'
 responses:
   '200':
-    description: Successfully  Get contact by id
+    description: 'Questionnaire retrieved successfully.'
     content:
       application/json:
         schema:
@@ -30,13 +29,14 @@ responses:
               example: 200
             message:
               type: string
-              example: Successfully found contact with id 675c18e78827cedae1f61afd!
+              example: 'Questionnaire retrieved successfully.'
             data:
-              type: object
-              $ref: '../../../components/schemas/contact.yaml'
+              $ref: '../../../components/schemas/questionnaires.yaml'
   '404':
     $ref: '../../../components/responses/404.yaml'
   '401':
     $ref: '../../../components/responses/401.yaml'
   '400':
     $ref: '../../../components/responses/400.yaml'
+  '500':
+    $ref: '../../../components/responses/500.yaml'
